--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ body {
 
 #root {
   height: 100vh;
-  overflow: hidden;
   display: flex;
   flex-direction: column;
+  overflow: visible;
 }
